// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BlockComponent 1`] = `
<div
  className="block current-block col"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-arrow-alt-circle-down fa-w-16 "
    data-icon="arrow-alt-circle-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM212 140v116h-70.9c-10.7 0-16.1 13-8.5 20.5l114.9 114.3c4.7 4.7 12.2 4.7 16.9 0l114.9-114.3c7.6-7.6 2.2-20.5-8.5-20.5H300V140c0-6.6-5.4-12-12-12h-64c-6.6 0-12 5.4-12 12z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Test BlockComponent 2`] = `
<div
  className="block current-block col"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-arrow-alt-circle-left fa-w-16 "
    data-icon="arrow-alt-circle-left"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zm116-292H256v-70.9c0-10.7-13-16.1-20.5-8.5L121.2 247.5c-4.7 4.7-4.7 12.2 0 16.9l114.3 114.9c7.6 7.6 20.5 2.2 20.5-8.5V300h116c6.6 0 12-5.4 12-12v-64c0-6.6-5.4-12-12-12z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Test BlockComponent 3`] = `
<div
  className="block current-block col"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-arrow-alt-circle-up fa-w-16 "
    data-icon="arrow-alt-circle-up"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm292 116V256h70.9c10.7 0 16.1-13 8.5-20.5L264.5 121.2c-4.7-4.7-12.2-4.7-16.9 0l-115 114.3c-7.6 7.6-2.2 20.5 8.5 20.5H212v116c0 6.6 5.4 12 12 12h64c6.6 0 12-5.4 12-12z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Test BlockComponent 4`] = `
<div
  className="block current-block col"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-arrow-alt-circle-right fa-w-16 "
    data-icon="arrow-alt-circle-right"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zM140 300h116v70.9c0 10.7 13 16.1 20.5 8.5l114.3-114.9c4.7-4.7 4.7-12.2 0-16.9l-114.3-115c-7.6-7.6-20.5-2.2-20.5 8.5V212H140c-6.6 0-12 5.4-12 12v64c0 6.6 5.4 12 12 12z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
